[gd_scene load_steps=2 format=3 uid="uid://bjxy1s75ej0ep"]

[ext_resource type="Script" path="res://scripts/tool_selection.gd" id="1_5j1mw"]

[node name="ToolSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5j1mw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 96.0
offset_right = 134.0
offset_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="tool1" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tool a"

[node name="tool2" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tool b"

[node name="tool3" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tool c"

[connection signal="pressed" from="MarginContainer/VBoxContainer/tool1" to="." method="_on_tool_1_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/tool2" to="." method="_on_tool_2_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/tool3" to="." method="_on_tool_3_pressed"]
